--- a/MH/MH_Car.ipynb
+++ b/MH/MH_Car.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOT4OzY34GN/5ofxufZiapS",
+      "authorship_tag": "ABX9TyN5oB1/XtEcuFjuJHQCC6jn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MohammadAghaei1/Polynomial-Car-price-prediction-/blob/main/MH/MH_Car.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Improt Data"
+      ],
+      "metadata": {
+        "id": "Z55t7f7l3wp9"
+      }
     },
     {
       "cell_type": "code",
@@ -422,10 +431,158 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# PreParing Data"
+      ],
+      "metadata": {
+        "id": "rZlyqEw94Aoq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['Owner'].unique())"
+      ],
+      "metadata": {
+        "id": "AIhgaTnLzS_g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "30fd4161-f46d-4326-8590-d399d9f4491c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['Transmission'].unique())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PaqhEw8e4LQ9",
+        "outputId": "842d90b2-e28a-49be-9aa0-2622486e0820"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Manual' 'Automatic']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['Seller_Type'].unique())"
+      ],
+      "metadata": {
+        "id": "TDBQ7FdV4SG5",
+        "outputId": "788358da-c67a-486d-b777-785c08a68b31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Dealer' 'Individual']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['Fuel_Type'].unique())"
+      ],
+      "metadata": {
+        "id": "YE-_bcAy4ZHy",
+        "outputId": "3dd12a70-8ab2-4293-c438-1ae9d7591961",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Petrol' 'Diesel' 'CNG']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df['Car_Name'].unique())"
+      ],
+      "metadata": {
+        "id": "zW9fB6Dh4fNf",
+        "outputId": "c5ce36e6-99dc-463b-a38c-c3bcdff4d2d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ritz' 'sx4' 'ciaz' 'wagon r' 'swift' 'vitara brezza' 's cross'\n",
+            " 'alto 800' 'ertiga' 'dzire' 'alto k10' 'ignis' '800' 'baleno' 'omni'\n",
+            " 'fortuner' 'innova' 'corolla altis' 'etios cross' 'etios g' 'etios liva'\n",
+            " 'corolla' 'etios gd' 'camry' 'land cruiser' 'Royal Enfield Thunder 500'\n",
+            " 'UM Renegade Mojave' 'KTM RC200' 'Bajaj Dominar 400'\n",
+            " 'Royal Enfield Classic 350' 'KTM RC390' 'Hyosung GT250R'\n",
+            " 'Royal Enfield Thunder 350' 'KTM 390 Duke ' 'Mahindra Mojo XT300'\n",
+            " 'Bajaj Pulsar RS200' 'Royal Enfield Bullet 350'\n",
+            " 'Royal Enfield Classic 500' 'Bajaj Avenger 220' 'Bajaj Avenger 150'\n",
+            " 'Honda CB Hornet 160R' 'Yamaha FZ S V 2.0' 'Yamaha FZ 16'\n",
+            " 'TVS Apache RTR 160' 'Bajaj Pulsar 150' 'Honda CBR 150' 'Hero Extreme'\n",
+            " 'Bajaj Avenger 220 dtsi' 'Bajaj Avenger 150 street' 'Yamaha FZ  v 2.0'\n",
+            " 'Bajaj Pulsar  NS 200' 'Bajaj Pulsar 220 F' 'TVS Apache RTR 180'\n",
+            " 'Hero Passion X pro' 'Bajaj Pulsar NS 200' 'Yamaha Fazer '\n",
+            " 'Honda Activa 4G' 'TVS Sport ' 'Honda Dream Yuga '\n",
+            " 'Bajaj Avenger Street 220' 'Hero Splender iSmart' 'Activa 3g'\n",
+            " 'Hero Passion Pro' 'Honda CB Trigger' 'Yamaha FZ S '\n",
+            " 'Bajaj Pulsar 135 LS' 'Activa 4g' 'Honda CB Unicorn'\n",
+            " 'Hero Honda CBZ extreme' 'Honda Karizma' 'Honda Activa 125' 'TVS Jupyter'\n",
+            " 'Hero Honda Passion Pro' 'Hero Splender Plus' 'Honda CB Shine'\n",
+            " 'Bajaj Discover 100' 'Suzuki Access 125' 'TVS Wego' 'Honda CB twister'\n",
+            " 'Hero Glamour' 'Hero Super Splendor' 'Bajaj Discover 125' 'Hero Hunk'\n",
+            " 'Hero  Ignitor Disc' 'Hero  CBZ Xtreme' 'Bajaj  ct 100' 'i20' 'grand i10'\n",
+            " 'i10' 'eon' 'xcent' 'elantra' 'creta' 'verna' 'city' 'brio' 'amaze'\n",
+            " 'jazz']\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "AIhgaTnLzS_g"
+        "id": "S2ska1r14jkN"
       },
       "execution_count": null,
       "outputs": []
