--- a/Mohammad/Car_price_prediction.ipynb
+++ b/Mohammad/Car_price_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeIPc8oKpOnmugFsjasXK2",
+      "authorship_tag": "ABX9TyNjFj0woCd56K1i9No5B5G6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -851,33 +851,38 @@
     {
       "cell_type": "code",
       "source": [
+        "duplicate_rows = df[df.duplicated()]\n",
+        "print(\"Duplicate Rows:\")\n",
         "display(duplicate_rows)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
+          "height": 106
         },
-        "id": "Fa64Kplo7Hmp",
-        "outputId": "e5d69414-b152-4b48-8e79-0cfe4ddbb628"
+        "id": "rCciT6sG7-WO",
+        "outputId": "b7127683-c8f4-483a-ff8c-650cb34b7fcc"
       },
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Duplicate Rows:\n"
+          ]
+        },
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "    Car_Name  Year  Selling_Price  Present_Price  Kms_Driven Fuel_Type  \\\n",
-              "17    ertiga  2016           7.75          10.79       43000    Diesel   \n",
-              "93  fortuner  2015          23.00          30.61       40000    Diesel   \n",
-              "\n",
-              "   Seller_Type Transmission  Owner  \n",
-              "17      Dealer       Manual      0  \n",
-              "93      Dealer    Automatic      0  "
+              "Empty DataFrame\n",
+              "Columns: [Car_Name, Year, Selling_Price, Present_Price, Kms_Driven, Fuel_Type, Seller_Type, Transmission, Owner]\n",
+              "Index: []"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4935af27-aac6-4b8d-b65f-edc4b14a06e3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-07cb3b69-cef8-452c-a251-8d0e1cf1292c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -908,37 +913,13 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>ertiga</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>7.75</td>\n",
-              "      <td>10.79</td>\n",
-              "      <td>43000</td>\n",
-              "      <td>Diesel</td>\n",
-              "      <td>Dealer</td>\n",
-              "      <td>Manual</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>93</th>\n",
-              "      <td>fortuner</td>\n",
-              "      <td>2015</td>\n",
-              "      <td>23.00</td>\n",
-              "      <td>30.61</td>\n",
-              "      <td>40000</td>\n",
-              "      <td>Diesel</td>\n",
-              "      <td>Dealer</td>\n",
-              "      <td>Automatic</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4935af27-aac6-4b8d-b65f-edc4b14a06e3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-07cb3b69-cef8-452c-a251-8d0e1cf1292c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -990,12 +971,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4935af27-aac6-4b8d-b65f-edc4b14a06e3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-07cb3b69-cef8-452c-a251-8d0e1cf1292c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4935af27-aac6-4b8d-b65f-edc4b14a06e3');\n",
+              "        const element = document.querySelector('#df-07cb3b69-cef8-452c-a251-8d0e1cf1292c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1015,134 +996,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-f1aaf7d8-fa3d-45bb-982f-1e024d4deb93\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f1aaf7d8-fa3d-45bb-982f-1e024d4deb93')\"\n",
-              "                title=\"Suggest charts\"\n",
-              "                style=\"display:none;\">\n",
-              "\n",
-              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "     width=\"24px\">\n",
-              "    <g>\n",
-              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-              "    </g>\n",
-              "</svg>\n",
-              "      </button>\n",
-              "\n",
-              "<style>\n",
-              "  .colab-df-quickchart {\n",
-              "      --bg-color: #E8F0FE;\n",
-              "      --fill-color: #1967D2;\n",
-              "      --hover-bg-color: #E2EBFA;\n",
-              "      --hover-fill-color: #174EA6;\n",
-              "      --disabled-fill-color: #AAA;\n",
-              "      --disabled-bg-color: #DDD;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart {\n",
-              "      --bg-color: #3B4455;\n",
-              "      --fill-color: #D2E3FC;\n",
-              "      --hover-bg-color: #434B5C;\n",
-              "      --hover-fill-color: #FFFFFF;\n",
-              "      --disabled-bg-color: #3B4455;\n",
-              "      --disabled-fill-color: #666;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart {\n",
-              "    background-color: var(--bg-color);\n",
-              "    border: none;\n",
-              "    border-radius: 50%;\n",
-              "    cursor: pointer;\n",
-              "    display: none;\n",
-              "    fill: var(--fill-color);\n",
-              "    height: 32px;\n",
-              "    padding: 0;\n",
-              "    width: 32px;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart:hover {\n",
-              "    background-color: var(--hover-bg-color);\n",
-              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "    fill: var(--button-hover-fill-color);\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart-complete:disabled,\n",
-              "  .colab-df-quickchart-complete:disabled:hover {\n",
-              "    background-color: var(--disabled-bg-color);\n",
-              "    fill: var(--disabled-fill-color);\n",
-              "    box-shadow: none;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-spinner {\n",
-              "    border: 2px solid var(--fill-color);\n",
-              "    border-color: transparent;\n",
-              "    border-bottom-color: var(--fill-color);\n",
-              "    animation:\n",
-              "      spin 1s steps(1) infinite;\n",
-              "  }\n",
-              "\n",
-              "  @keyframes spin {\n",
-              "    0% {\n",
-              "      border-color: transparent;\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "      border-left-color: var(--fill-color);\n",
-              "    }\n",
-              "    20% {\n",
-              "      border-color: transparent;\n",
-              "      border-left-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "    }\n",
-              "    30% {\n",
-              "      border-color: transparent;\n",
-              "      border-left-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "      border-right-color: var(--fill-color);\n",
-              "    }\n",
-              "    40% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "    }\n",
-              "    60% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "    }\n",
-              "    80% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "    }\n",
-              "    90% {\n",
-              "      border-color: transparent;\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "    }\n",
-              "  }\n",
-              "</style>\n",
-              "\n",
-              "      <script>\n",
-              "        async function quickchart(key) {\n",
-              "          const quickchartButtonEl =\n",
-              "            document.querySelector('#' + key + ' button');\n",
-              "          quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-              "          quickchartButtonEl.classList.add('colab-df-spinner');\n",
-              "          try {\n",
-              "            const charts = await google.colab.kernel.invokeFunction(\n",
-              "                'suggestCharts', [key], {});\n",
-              "          } catch (error) {\n",
-              "            console.error('Error during call to suggestCharts:', error);\n",
-              "          }\n",
-              "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-              "        }\n",
-              "        (() => {\n",
-              "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-f1aaf7d8-fa3d-45bb-982f-1e024d4deb93 button');\n",
-              "          quickchartButtonEl.style.display =\n",
-              "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "        })();\n",
-              "      </script>\n",
-              "    </div>\n",
-              "\n",
-              "  <div id=\"id_049d92a9-7870-4e79-885a-f15db1de48af\">\n",
+              "  <div id=\"id_4b5fb1ef-93f0-4d54-b6e3-2d89bb13a912\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1186,7 +1040,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_049d92a9-7870-4e79-885a-f15db1de48af button.colab-df-generate');\n",
+              "        document.querySelector('#id_4b5fb1ef-93f0-4d54-b6e3-2d89bb13a912 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1203,7 +1057,7 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "duplicate_rows",
-              "summary": "{\n  \"name\": \"duplicate_rows\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Car_Name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"fortuner\",\n          \"ertiga\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Year\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 2015,\n        \"max\": 2016,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          2015,\n          2016\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Selling_Price\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 10.78337841309485,\n        \"min\": 7.75,\n        \"max\": 23.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          23.0,\n          7.75\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Present_Price\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 14.014856403117372,\n        \"min\": 10.79,\n        \"max\": 30.61,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          30.61,\n          10.79\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Kms_Driven\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2121,\n        \"min\": 40000,\n        \"max\": 43000,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          40000,\n          43000\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Fuel_Type\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Diesel\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Seller_Type\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Dealer\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Transmission\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"Automatic\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Owner\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "repr_error": "Out of range float values are not JSON compliant: nan"
             }
           },
           "metadata": {}
@@ -1218,17 +1072,15 @@
           "height": 52
         },
         "id": "04473041",
-        "outputId": "51eb83fe-e24d-479b-8257-917cc1974994"
+        "outputId": "c80ae057-2ab7-4cb4-d6f0-b25fcf8e6cae"
       },
       "source": [
-        "# Drop duplicate rows\n",
         "df.drop_duplicates(inplace=True)\n",
         "\n",
-        "# Verify that duplicates have been removed\n",
         "print(\"DataFrame after removing duplicates:\")\n",
         "display(df.duplicated().sum())"
       ],
-      "execution_count": 32,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1258,7 +1110,6 @@
         "outputId": "b1ffd9de-5d9e-40a7-dc9b-eca85bd98c2a"
       },
       "source": [
-        "# Get unique values from the 'Car_Name' column\n",
         "unique_car_names = df['Owner'].unique()\n",
         "print(unique_car_names)"
       ],
