--- a/Mohammad/Car_price_prediction.ipynb
+++ b/Mohammad/Car_price_prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCc2imHaUVwOk/iBbq5gZa",
+      "authorship_tag": "ABX9TyMZGrlYmn3QEsGIUjZDJBwi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,8 @@
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n"
+        "import seaborn as sns\n",
+        "from scipy import stats"
       ],
       "metadata": {
         "id": "3SE2aB3s2yh_"
@@ -2789,8 +2790,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from scipy import stats\n",
-        "\n",
         "# Group 'Selling_Price' by 'Year'\n",
         "groups = [df['Selling_Price'][df['Year'] == year] for year in df['Year'].unique()]\n",
         "\n",
@@ -2828,6 +2827,50 @@
             "\n",
             "Since the p-value is less than the significance level (alpha = 0.05), we reject the null hypothesis.\n",
             "There is a statistically significant difference in the median Selling_Price across different years.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group 'Selling_Price' by 'Fuel_Type'\n",
+        "groups = [df['Selling_Price'][df['Fuel_Type'] == fuel_type] for fuel_type in df['Fuel_Type'].unique()]\n",
+        "\n",
+        "# Perform Kruskal-Wallis test\n",
+        "h_statistic, p_value = stats.kruskal(*groups)\n",
+        "\n",
+        "# Print the results\n",
+        "print(f\"Kruskal-Wallis H-statistic: {h_statistic:.4f}\")\n",
+        "print(f\"P-value: {p_value:.20f}\")\n",
+        "\n",
+        "# Interpret the results\n",
+        "alpha = 0.05\n",
+        "if p_value < alpha:\n",
+        "    print(\"\\nSince the p-value is less than the significance level (alpha = 0.05), we reject the null hypothesis.\")\n",
+        "    print(\"There is a statistically significant difference in the median Selling_Price across different Fuel_Type categories.\")\n",
+        "else:\n",
+        "    print(\"\\nSince the p-value is greater than the significance level (alpha = 0.05), we fail to reject the null hypothesis.\")\n",
+        "    print(\"There is no statistically significant difference in the median Selling_Price across different Fuel_Type categories.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Be98BXzDLeru",
+        "outputId": "c98c6a02-5cc9-437c-90f8-c87170589bc4"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kruskal-Wallis H-statistic: 75.3944\n",
+            "P-value: 0.00000000000000004249\n",
+            "\n",
+            "Since the p-value is less than the significance level (alpha = 0.05), we reject the null hypothesis.\n",
+            "There is a statistically significant difference in the median Selling_Price across different Fuel_Type categories.\n"
           ]
         }
       ]
